# household-electricity-demand-forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-torch-cpu.txt  requirements.txt
configs/: README.md  lstm.yaml  mlp.yaml
data/: README.md
notebooks/: README.md  data_analysis.ipynb  data_graphing.ipynb
outputs/models/: README.md
scripts/: download_data.py  preprocess_data.py
src/data/: analysis.py  preprocessing.py
src/datasets/: __init__.py  pytorch_datasets.py  sliding_window.py
src/models/: lstm.py  mlp.py
src/training/: thing.py  train.py  utils.py
src/utils/: __init__.py  clean_data.py  create_graph.py  print.py  training.py
tests/: test_dataset.py  test_sliding_window.py
